# black-and-white-headtracking

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md  launcher-manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
config/: HeadTracking.ini
scripts/: deploy.ps1  ghidra-headless.ps1  install.cmd  package-release.ps1  release-nightly.ps1  release.ps1  uninstall.cmd  update-deps.ps1
scripts/ghidra/: bone_buffer_share.py  cb_check.py  cc_disasm.py  cc_pick.py  check_817930_callgraph.py  check_bone_cc.py  check_bone_ret.py  check_cursor_cc.py  check_pick_in_sandbox.py  check_ret.py  check_shadow_cc.py  confirm_d3d_device.py  decompile.py  decompile_519ad0.py  decompile_5e42e0.py  decompile_7faff0.py  decompile_7fb290.py  decompile_817930.py  decompile_b370.py  decompile_billboard_proj.py  decompile_bone_funcs.py  decompile_citadel_set.py  decompile_gui_proj.py  decompile_namebox.py  decompile_new_pick_candidates.py  decompile_proj_helpers.py  decompile_snap_readers.py  disasm_0083a1d0.py  disasm_47af.py  disasm_855340.py  disasm_ea9de0_writers.py  disasm_shadow_parent.py  dump_camera_builder_tails.py  dump_camera_builder_writes.py  dump_citadel_mgr.py  dump_citadel_selector.py  dump_ea9de0.py  dump_godhand.py  dump_leash_selector.py  enum_citadel_funcs.py  (+57 more)
src/: camera_hook.cpp  camera_hook.h  config.cpp  config.h  debug_log.h  engine_addresses.h  hotkey_handler.cpp  hotkey_handler.h  loader_main.cpp  main.cpp  plugin.cpp  plugin.h  version.h  water_shading.h  water_surface.cpp  water_surface.h
test/: water_shading_test.cpp
